used mockito for tests and better handled inserting vendor labels and converting uuidToBytes